--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <li hidden id="secretFriend"></li>
               <li hidden id="hiddenIcon"><i class="fa-solid fa-eye-slash"></i></li>
             </ul>
+            <div class="empty"></div>
           </div>
           <div class="result-buttons">
             <button disabled active class="button-hide" onclick="hideName()">
